include/flow_ffi.h


typedef enum FlowError {
    FLOW_SUCCESS = 0,
    FLOW_ERROR_INVALID_HANDLE = -1,
    FLOW_ERROR_INVALID_ARGUMENT = -2,
    FLOW_ERROR_NODE_NOT_FOUND = -3,
    FLOW_ERROR_PORT_NOT_FOUND = -4,
    FLOW_ERROR_CONNECTION_FAILED = -5,
    FLOW_ERROR_MODULE_LOAD_FAILED = -6,
    FLOW_ERROR_COMPUTATION_FAILED = -7,
    FLOW_ERROR_OUT_OF_MEMORY = -8,
    FLOW_ERROR_TYPE_MISMATCH = -9,
    FLOW_ERROR_NOT_IMPLEMENTED = -10,
    FLOW_ERROR_UNKNOWN = -999
} FlowError;
typedef struct FlowGraph* FlowGraphHandle;
typedef struct FlowNode* FlowNodeHandle;
typedef struct FlowConnection* FlowConnectionHandle;
typedef struct FlowNodeData* FlowNodeDataHandle;
typedef struct FlowConnectionInfo {
    const char* id;
    const char* source_node_id;
    const char* source_port_key;
    const char* target_node_id;
    const char* target_port_key;
} FlowConnectionInfo;
typedef enum FlowImageKind {
    FLOW_IMAGE_KIND_ENCODED  = 0, 
    FLOW_IMAGE_KIND_RAW_RGBA = 1, 
} FlowImageKind;
typedef enum FlowPixelFormat {
    FLOW_PIXEL_FORMAT_RGBA8888 = 0, 
} FlowPixelFormat;
typedef struct FlowImageDescriptor {
    FlowImageKind   kind;
    FlowPixelFormat format;            
    int32_t         width;
    int32_t         height;
    int32_t         row_stride_bytes;  
    const uint8_t*  bytes;             
    size_t          bytes_length;
    uint64_t        content_version;   
} FlowImageDescriptor;
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_image_raw(
    const uint8_t* bytes,
    int32_t width, int32_t height,
    int32_t row_stride_bytes,
    FlowPixelFormat format);
FLOW_FFI_EXPORT FlowError flow_data_image_borrow(
    FlowNodeDataHandle data, FlowImageDescriptor* out_desc);
FLOW_FFI_EXPORT bool flow_data_is_image(FlowNodeDataHandle data);
FLOW_FFI_EXPORT void flow_ffi_set_texture_registrar(void* registrar);
FLOW_FFI_EXPORT void* flow_ffi_get_texture_registrar(void);
FLOW_FFI_EXPORT int flow_ffi_is_texture_registrar_bound(void);
typedef int  (*FlowTextureCreateFn)(void* registrar,
                                    int32_t width, int32_t height,
                                    void** out_texture_object,
                                    int64_t* out_texture_id,
                                    uint32_t* out_gl_name);
typedef void (*FlowTextureDestroyFn)(void* registrar,
                                     void* texture_object,
                                     int64_t texture_id);
typedef void (*FlowTextureMarkFrameFn)(void* registrar,
                                       void* texture_object);
typedef int  (*FlowTextureWaitInitFn)(void* texture_object,
                                      void** out_cuda_resource);
typedef int  (*FlowTextureSubmitFrameFn)(void*       texture_object,
                                         const void* src_device_ptr,
                                         int32_t     src_pitch_bytes,
                                         int32_t     width,
                                         int32_t     height,
                                         void*       ready_event);
typedef struct FlowTextureOps {
    FlowTextureCreateFn      create_gl_texture;
    FlowTextureDestroyFn     destroy_gl_texture;
    FlowTextureMarkFrameFn   mark_frame_available;
    FlowTextureWaitInitFn    wait_initialized;    
    FlowTextureSubmitFrameFn submit_frame;        
} FlowTextureOps;
FLOW_FFI_EXPORT void  flow_ffi_set_texture_ops(const FlowTextureOps* ops);
FLOW_FFI_EXPORT int   flow_ffi_is_texture_ops_bound(void);
FLOW_FFI_EXPORT FlowTextureOps flow_ffi_get_texture_ops(void);
typedef void* FlowGpuTextureHandle;
typedef int  (*FlowGpuTextureCreateFn)(void*    registrar,
                                       int32_t  width,
                                       int32_t  height,
                                       void**   out_texture_object,
                                       int64_t* out_texture_id);
typedef void (*FlowGpuTextureDestroyFn)(void*   registrar,
                                        void*   texture_object,
                                        int64_t texture_id);
typedef void (*FlowGpuTextureMarkFrameFn)(void* registrar,
                                          void* texture_object);
typedef int  (*FlowGpuTextureWaitInitFn)(void* texture_object);
typedef int  (*FlowGpuTextureSubmitFrameFn)(void*       texture_object,
                                            const void* src_bytes,
                                            int32_t     row_stride_bytes,
                                            int32_t     width,
                                            int32_t     height);
typedef struct FlowGpuTextureOps {
    FlowGpuTextureCreateFn      create_texture;
    FlowGpuTextureDestroyFn     destroy_texture;
    FlowGpuTextureMarkFrameFn   mark_frame_available;
    FlowGpuTextureWaitInitFn    wait_initialized;
    FlowGpuTextureSubmitFrameFn submit_frame;
} FlowGpuTextureOps;
FLOW_FFI_EXPORT void flow_ffi_set_gpu_texture_ops(const FlowGpuTextureOps* ops);
FLOW_FFI_EXPORT int  flow_ffi_is_gpu_texture_ops_bound(void);
FLOW_FFI_EXPORT FlowGpuTextureOps flow_ffi_get_gpu_texture_ops(void);
FLOW_FFI_EXPORT bool flow_ffi_gpu_texture_sink_available(void);
FLOW_FFI_EXPORT FlowError flow_ffi_register_flutter_texture(
    int32_t              w,
    int32_t              h,
    FlowGpuTextureHandle* out,
    int64_t*             out_texture_id);
FLOW_FFI_EXPORT FlowError flow_ffi_unregister_flutter_texture(
    FlowGpuTextureHandle handle);
FLOW_FFI_EXPORT FlowError flow_ffi_upload_to_texture(
    FlowGpuTextureHandle handle,
    const void*          host_bytes,
    int32_t              row_stride_bytes,
    int32_t              width,
    int32_t              height);
FLOW_FFI_EXPORT void flow_free_string(char* str);
FLOW_FFI_EXPORT void flow_free_string_array(char** array, size_t count);
FLOW_FFI_EXPORT void flow_free_handle_array(void** array);
FLOW_FFI_EXPORT void flow_free_connection_array(FlowConnectionInfo* connections, size_t count);
typedef void (*FlowNodeEventCallback)(FlowNodeHandle node, void* user_data);
typedef void (*FlowConnectionEventCallback)(FlowConnectionHandle conn, void* user_data);
typedef struct FlowEventRegistration* FlowEventRegistrationHandle;
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_graph_on_node_added(FlowGraphHandle graph,
                                                                     FlowNodeEventCallback callback,
                                                                     void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle
flow_graph_on_node_removed(FlowGraphHandle graph, FlowNodeEventCallback callback, void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_graph_on_nodes_connected(
    FlowGraphHandle graph, FlowConnectionEventCallback callback, void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_graph_on_nodes_disconnected(
    FlowGraphHandle graph, FlowConnectionEventCallback callback, void* user_data);