dart_package/lib/src/ffi/bindings_generated.dart


  late final _flow_data_create_image_rawPtr = _lookup<
      ffi.NativeFunction<
          FlowNodeDataHandle Function(ffi.Pointer<ffi.Uint8>, ffi.Int32,
              ffi.Int32, ffi.Int32, ffi.Int32)>>('flow_data_create_image_raw');
  late final _flow_data_create_image_raw =
      _flow_data_create_image_rawPtr.asFunction<
          FlowNodeDataHandle Function(
              ffi.Pointer<ffi.Uint8>, int, int, int, int)>();

  int flow_data_image_borrow(
    FlowNodeDataHandle data,
    ffi.Pointer<FlowImageDescriptor> out_desc,
  ) {
    return _flow_data_image_borrow(
      data,
      out_desc,
    );
  }

  late final _flow_data_image_borrowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeDataHandle,
              ffi.Pointer<FlowImageDescriptor>)>>('flow_data_image_borrow');
  late final _flow_data_image_borrow = _flow_data_image_borrowPtr.asFunction<
      int Function(FlowNodeDataHandle, ffi.Pointer<FlowImageDescriptor>)>();

  bool flow_data_is_image(
    FlowNodeDataHandle data,
  ) {
    return _flow_data_is_image(
      data,
    );
  }

  late final _flow_data_is_imagePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(FlowNodeDataHandle)>>(
          'flow_data_is_image');
  late final _flow_data_is_image =
      _flow_data_is_imagePtr.asFunction<bool Function(FlowNodeDataHandle)>();

  void flow_ffi_set_texture_registrar(
    ffi.Pointer<ffi.Void> registrar,
  ) {
    return _flow_ffi_set_texture_registrar(
      registrar,
    );
  }

  late final _flow_ffi_set_texture_registrarPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'flow_ffi_set_texture_registrar');
  late final _flow_ffi_set_texture_registrar =
      _flow_ffi_set_texture_registrarPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> flow_ffi_get_texture_registrar() {
    return _flow_ffi_get_texture_registrar();
  }

  late final _flow_ffi_get_texture_registrarPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'flow_ffi_get_texture_registrar');
  late final _flow_ffi_get_texture_registrar =
      _flow_ffi_get_texture_registrarPtr
          .asFunction<ffi.Pointer<ffi.Void> Function()>();

  int flow_ffi_is_texture_registrar_bound() {
    return _flow_ffi_is_texture_registrar_bound();
  }

  late final _flow_ffi_is_texture_registrar_boundPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flow_ffi_is_texture_registrar_bound');
  late final _flow_ffi_is_texture_registrar_bound =
      _flow_ffi_is_texture_registrar_boundPtr.asFunction<int Function()>();

  void flow_ffi_set_texture_ops(
    ffi.Pointer<FlowTextureOps> ops,
  ) {
    return _flow_ffi_set_texture_ops(
      ops,
    );
  }

  late final _flow_ffi_set_texture_opsPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<FlowTextureOps>)>>(
      'flow_ffi_set_texture_ops');
  late final _flow_ffi_set_texture_ops = _flow_ffi_set_texture_opsPtr
      .asFunction<void Function(ffi.Pointer<FlowTextureOps>)>();

  int flow_ffi_is_texture_ops_bound() {
    return _flow_ffi_is_texture_ops_bound();
  }

  late final _flow_ffi_is_texture_ops_boundPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flow_ffi_is_texture_ops_bound');
  late final _flow_ffi_is_texture_ops_bound =
      _flow_ffi_is_texture_ops_boundPtr.asFunction<int Function()>();

  FlowTextureOps flow_ffi_get_texture_ops() {
    return _flow_ffi_get_texture_ops();
  }

  late final _flow_ffi_get_texture_opsPtr =
      _lookup<ffi.NativeFunction<FlowTextureOps Function()>>(
          'flow_ffi_get_texture_ops');
  late final _flow_ffi_get_texture_ops =
      _flow_ffi_get_texture_opsPtr.asFunction<FlowTextureOps Function()>();

  void flow_ffi_set_gpu_texture_ops(
    ffi.Pointer<FlowGpuTextureOps> ops,
  ) {
    return _flow_ffi_set_gpu_texture_ops(
      ops,
    );
  }

  late final _flow_ffi_set_gpu_texture_opsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<FlowGpuTextureOps>)>>(
      'flow_ffi_set_gpu_texture_ops');
  late final _flow_ffi_set_gpu_texture_ops = _flow_ffi_set_gpu_texture_opsPtr
      .asFunction<void Function(ffi.Pointer<FlowGpuTextureOps>)>();

  int flow_ffi_is_gpu_texture_ops_bound() {
    return _flow_ffi_is_gpu_texture_ops_bound();
  }

  late final _flow_ffi_is_gpu_texture_ops_boundPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flow_ffi_is_gpu_texture_ops_bound');
  late final _flow_ffi_is_gpu_texture_ops_bound =
      _flow_ffi_is_gpu_texture_ops_boundPtr.asFunction<int Function()>();

  FlowGpuTextureOps flow_ffi_get_gpu_texture_ops() {
    return _flow_ffi_get_gpu_texture_ops();
  }

  late final _flow_ffi_get_gpu_texture_opsPtr =
      _lookup<ffi.NativeFunction<FlowGpuTextureOps Function()>>(
          'flow_ffi_get_gpu_texture_ops');
  late final _flow_ffi_get_gpu_texture_ops = _flow_ffi_get_gpu_texture_opsPtr
      .asFunction<FlowGpuTextureOps Function()>();

  bool flow_ffi_gpu_texture_sink_available() {
    return _flow_ffi_gpu_texture_sink_available();
  }

  late final _flow_ffi_gpu_texture_sink_availablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'flow_ffi_gpu_texture_sink_available');
  late final _flow_ffi_gpu_texture_sink_available =
      _flow_ffi_gpu_texture_sink_availablePtr.asFunction<bool Function()>();

  int flow_ffi_register_flutter_texture(
    int w,
    int h,
    ffi.Pointer<FlowGpuTextureHandle> out,
    ffi.Pointer<ffi.Int64> out_texture_id,
  ) {
    return _flow_ffi_register_flutter_texture(
      w,
      h,
      out,
      out_texture_id,
    );
  }

  late final _flow_ffi_register_flutter_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<FlowGpuTextureHandle>,
              ffi.Pointer<ffi.Int64>)>>('flow_ffi_register_flutter_texture');
  late final _flow_ffi_register_flutter_texture =
      _flow_ffi_register_flutter_texturePtr.asFunction<
          int Function(int, int, ffi.Pointer<FlowGpuTextureHandle>,
              ffi.Pointer<ffi.Int64>)>();

  int flow_ffi_unregister_flutter_texture(
    FlowGpuTextureHandle handle,
  ) {
    return _flow_ffi_unregister_flutter_texture(
      handle,
    );
  }

  late final _flow_ffi_unregister_flutter_texturePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowGpuTextureHandle)>>(
          'flow_ffi_unregister_flutter_texture');
  late final _flow_ffi_unregister_flutter_texture =
      _flow_ffi_unregister_flutter_texturePtr
          .asFunction<int Function(FlowGpuTextureHandle)>();

  int flow_ffi_upload_to_texture(
    FlowGpuTextureHandle handle,
    ffi.Pointer<ffi.Void> host_bytes,
    int row_stride_bytes,
    int width,
    int height,
  ) {
    return _flow_ffi_upload_to_texture(
      handle,
      host_bytes,
      row_stride_bytes,
      width,
      height,
    );
  }

  late final _flow_ffi_upload_to_texturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowGpuTextureHandle, ffi.Pointer<ffi.Void>,
              ffi.Int32, ffi.Int32, ffi.Int32)>>('flow_ffi_upload_to_texture');
  late final _flow_ffi_upload_to_texture =
      _flow_ffi_upload_to_texturePtr.asFunction<
          int Function(
              FlowGpuTextureHandle, ffi.Pointer<ffi.Void>, int, int, int)>();

  void flow_free_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _flow_free_string(
      str,
    );
  }

  late final _flow_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'flow_free_string');
  late final _flow_free_string =
      _flow_free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void flow_free_string_array(
    ffi.Pointer<ffi.Pointer<ffi.Char>> array,
    int count,
  ) {
    return _flow_free_string_array(
      array,
      count,
    );
  }

  late final _flow_free_string_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size)>>('flow_free_string_array');
  late final _flow_free_string_array = _flow_free_string_arrayPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  void flow_free_handle_array(
    ffi.Pointer<ffi.Pointer<ffi.Void>> array,
  ) {
    return _flow_free_handle_array(
      array,
    );
  }

  late final _flow_free_handle_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Void>>)>>('flow_free_handle_array');
  late final _flow_free_handle_array = _flow_free_handle_arrayPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Void>>)>();

  void flow_free_connection_array(
    ffi.Pointer<FlowConnectionInfo> connections,
    int count,
  ) {
    return _flow_free_connection_array(
      connections,
      count,
    );
  }

  late final _flow_free_connection_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<FlowConnectionInfo>,
              ffi.Size)>>('flow_free_connection_array');
  late final _flow_free_connection_array = _flow_free_connection_arrayPtr
      .asFunction<void Function(ffi.Pointer<FlowConnectionInfo>, int)>();

  FlowEventRegistrationHandle flow_graph_on_node_added(
    FlowGraphHandle graph,
    FlowNodeEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_graph_on_node_added(
      graph,
      callback,
      user_data,
    );
  }

  late final _flow_graph_on_node_addedPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle,
              FlowNodeEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_graph_on_node_added');
  late final _flow_graph_on_node_added =
      _flow_graph_on_node_addedPtr.asFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle, FlowNodeEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_graph_on_node_removed(
    FlowGraphHandle graph,
    FlowNodeEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_graph_on_node_removed(
      graph,
      callback,
      user_data,
    );
  }

  late final _flow_graph_on_node_removedPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle,
              FlowNodeEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_graph_on_node_removed');
  late final _flow_graph_on_node_removed =
      _flow_graph_on_node_removedPtr.asFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle, FlowNodeEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_graph_on_nodes_connected(
    FlowGraphHandle graph,
    FlowConnectionEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_graph_on_nodes_connected(
      graph,
      callback,
      user_data,
    );
  }

  late final _flow_graph_on_nodes_connectedPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle,
              FlowConnectionEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_graph_on_nodes_connected');
  late final _flow_graph_on_nodes_connected =
      _flow_graph_on_nodes_connectedPtr.asFunction<
          FlowEventRegistrationHandle Function(FlowGraphHandle,
              FlowConnectionEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_graph_on_nodes_disconnected(
    FlowGraphHandle graph,
    FlowConnectionEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_graph_on_nodes_disconnected(
      graph,
      callback,
      user_data,
    );
  }
